[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/real_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/button.tres" type="Theme" id=3]
[ext_resource path="res://ui/Shop.gd" type="Script" id=4]

[node name="Shop" type="Control"]
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_left = -262.0
margin_top = -269.0
margin_right = 262.0
margin_bottom = 266.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 65.0
margin_right = -70.0
margin_bottom = -65.0
custom_fonts/font = ExtResource( 2 )
text = "Sell Plants 
$3 per plant

Buy Seeds
$1 per seed
"

[node name="Button" type="Button" parent="Panel"]
margin_left = 80.0
margin_top = 343.0
margin_right = 249.0
margin_bottom = 401.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -1.0
margin_right = -49.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
text = "BUY"

[node name="Button2" type="Button" parent="Panel"]
margin_left = 83.0
margin_top = 174.0
margin_right = 252.0
margin_bottom = 232.0
theme = ExtResource( 3 )

[node name="Label2" type="Label" parent="Panel/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_top = -1.0
margin_right = -35.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
text = "SELL"

[node name="Button3" type="Button" parent="Panel"]
margin_left = 80.0
margin_top = 436.0
margin_right = 345.0
margin_bottom = 494.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel/Button3"]
margin_left = 36.0
margin_top = -2.0
margin_right = 228.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "UPGRADES"

[node name="Panel2" type="Panel" parent="."]
margin_left = -262.0
margin_top = -269.0
margin_right = 262.0
margin_bottom = 266.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 65.0
margin_right = -70.0
margin_bottom = -65.0
custom_fonts/font = ExtResource( 2 )
text = "Fertilizer
$40 per upgrade

Floodbarrier
$40 per upgrade
"

[node name="Floodbarrier" type="Button" parent="Panel2"]
margin_left = 80.0
margin_top = 343.0
margin_right = 249.0
margin_bottom = 401.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel2/Floodbarrier"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -1.0
margin_right = -49.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
text = "BUY"

[node name="Fertilizer" type="Button" parent="Panel2"]
margin_left = 83.0
margin_top = 174.0
margin_right = 252.0
margin_bottom = 232.0
theme = ExtResource( 3 )

[node name="Label2" type="Label" parent="Panel2/Fertilizer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_top = -1.0
margin_right = -35.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
text = "BUY"

[node name="plants" type="Button" parent="Panel2"]
margin_left = 80.0
margin_top = 436.0
margin_right = 345.0
margin_bottom = 494.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel2/plants"]
margin_left = 58.0
margin_top = -2.0
margin_right = 208.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "PLANTS"

[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Panel2/Floodbarrier" to="." method="_on_Floodbarrier_pressed"]
[connection signal="pressed" from="Panel2/Fertilizer" to="." method="_on_Fertilizer_pressed"]
[connection signal="pressed" from="Panel2/plants" to="." method="_on_plants_pressed"]
